--- a/configure.in
+++ b/configure.in
@@ -60,7 +60,8 @@ AH_BOTTOM([
 #endif
 
 #if ZEND_BROKEN_SPRINTF
-int zend_sprintf(char *buffer, const char *format, ...);
+#include "zend_types.h"
+zend_string_size zend_sprintf(char *buffer, const char *format, ...);
 #else
 # define zend_sprintf sprintf
 #endif
@@ -864,7 +865,7 @@ fi
 PHP_ARG_ENABLE(zstrlen, whether to include deprecated Z_STRLEN macros,
 [  --disable-zstrlen       Disable deprecated Z_STRLEN macros], no, no)
 
-if test "$PHP_ZSTRLEN" == "yes"; then
+if test "$PHP_ZSTRLEN" = "yes"; then
   ZEND_NO_ZSTRLEN=1
 fi
 
